--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <body>
 <main>
   <section class="container">
+    <!-- USER SECTION START -->
     <section class="user-box">
       <section class="user-info">
         <figure class="profile-pic">
@@ -30,6 +31,26 @@
         <figure><P>Daily</P></figure>
         <figure><P>Weekly</P></figure>
         <figure><P>Monthly</P></figure>
+      </section>
+    </section>
+    <!-- USER SECTION END -->
+
+    <section class="card">
+      <section class="hero-img">
+        <img src="./images/icon-work.svg" alt="">
+      </section>
+      <section class="card-info">
+        <header>
+          <p>Work</p>
+          <img src="./images/icon-ellipsis.svg" alt="">
+        </header>
+        <section class="card-desc">
+          <figure class="hours"><h1>32hrs</h1></figure>
+          <figure class="time-period">
+            <p>Last Week - </p>
+            <p>36hrs</p>
+          </figure>
+        </section>
       </section>
     </section>
   </section>
