layout fixes and code updated

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </figure>
         <figure class="user-details">
           <p>Report for</p>
-          <h2>Jermey Robson</h2>
+          <p>Jermey Robson</p>
         </figure>
       </section>
       
@@ -66,6 +66,6 @@
   </section>
 </main>
 </body>
-<script src="main.js" type="module"></script>
+<script src="main.js"></script>
 </html>
 
